--- a/android/app/src/main/res/layout/date_item.xml
+++ b/android/app/src/main/res/layout/date_item.xml
@@ -10,7 +10,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="14sp"/>
+        android:textSize="14sp"
+        android:maxLines="1"
+        android:ellipsize="end"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -31,7 +33,8 @@
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:paddingStart="4dp"
-            android:paddingEnd="4dp"/>
+            android:paddingEnd="4dp"
+            />
     </LinearLayout>
 
 </LinearLayout>
